--- a/index.html
+++ b/index.html
@@ -7,22 +7,22 @@
   <title>webrtc proj1</title>
   <link rel="stylesheet" href="css/style.css">
 </head>
-<body>
-  <div class="navbar">
+<body>project1
+  <div>
     <h1>simple webrtc filter camera</h1>
   </div>
   <div class="top-container">
     <video id="video">Stream not available...</video>
-    <button id="photo-button" class="btn btn-dark">
+    <button id="photo-button" class="btn btn-light">
       Take Photo
     </button>
     <select id="photo-filter" class="select">
-      <option value="none">Normal</option>
+      <option value="none">None</option>
       <option value="grayscale(100%)">Grayscale</option>
       <option value="sepia(100%)">Sepia</option>
       <option value="invert(100%)">Invert</option>
       <option value="hue-rotate(90deg)">Hue</option>
-      <option value="blur(10px)">Blur</option>
+      <option value="brightness(2)">Brightness</option>
       <option value="contrast(200%)">Contrast</option>
     </select>
     <button id="clear-button" class="btn btn-light">Clear</button>
